force-app/main/default/objects/Book_Issue_and_Returns__c/Book_Issue_and_Returns__c.object-meta.xml
<CustomObject>
    <label>Book Issue and Returns</label>
    <nameField>
        <displayFormat>BIR-{00000}</displayFormat>
        <label>Book Issue and Returns Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Issue and Returns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>