force-app/main/default/objects/Book_Issue_and_Returns__c/fields/Book_Id__c.field-meta.xml
<CustomField>
    <fullName>Book_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Book Id</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Book__c.Status__c</field>
            <operation>equals</operation>
            <value>In Stock</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Book Issue and Returns</relationshipLabel>
    <relationshipName>Book_Issue_and_Returns</relationshipName>
    <type>Lookup</type>
</CustomField>