force-app/main/default/objects/Book_Issue_and_Returns__c/fields/Book_Status__c.field-meta.xml
<CustomField>
    <fullName>Book_Status__c</fullName>
    <label>Book Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>