force-app/main/default/objects/Book_Issue_and_Returns__c/fields/Date_of_Return__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Return__c</fullName>
    <label>Date of Return</label>
    <type>Date</type>
</CustomField>