force-app/main/default/objects/Book_Issue_and_Returns__c/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Id</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Book Issue and Returns</relationshipLabel>
    <relationshipName>Book_Issue_and_Returns</relationshipName>
    <type>Lookup</type>
</CustomField>