force-app/main/default/objects/Book_Issue_and_Returns__c/fields/Issued_By__c.field-meta.xml
<CustomField>
    <fullName>Issued_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issued By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Employees__c.Designation__c</field>
            <operation>equals</operation>
            <value>Librarian</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Book Issue and Returns (Employees)</relationshipLabel>
    <relationshipName>Book_Issue_and_Returns1</relationshipName>
    <type>Lookup</type>
</CustomField>