force-app/main/default/objects/Book_Issue_and_Returns__c/fields/OverDue_By__c.field-meta.xml
<CustomField>
    <fullName>OverDue_By__c</fullName>
    <formula>IF(
  OR(Date_of_Return__c = Date_of_Issue__c,Date_of_Return__c &lt;=Due_Date__c), 
  0, 
  IF(
    ISBLANK(Date_of_Return__c), 
    IF(
      TODAY() &gt; Due_Date__c,
      TODAY() - Due_Date__c,
      0
    ),
    Date_of_Return__c - Due_Date__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OverDue By</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>