force-app/main/default/objects/Book_Issue_and_Returns__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Book_Id__c</columns>
    <columns>Book_Status__c</columns>
    <columns>OverDue_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>